<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_banner"
        android:layout_width="320px"
        android:layout_height="50px"
        android:layout_gravity="center_horizontal"
        android:background="#B66666"
        android:gravity="center"
        android:text="*** PROPAGANDA ***"
        android:textColor="#DADADA" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_main" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/txt_appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffc600"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_brewery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_appname"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:onClick="onClickBrewery"
                android:text="@string/menu_brewery"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_brewery"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:onClick="onClickStyle"
                android:text="@string/menu_style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_beer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_style"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:onClick="onClickBeer"
                android:text="@string/menu_beer"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_buddy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_beer"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:onClick="onClickBuddy"
                android:text="@string/menu_buddy"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_review"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_buddy"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:onClick="onClickReview"
                android:text="@string/menu_review"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_review"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:onClick="onClickAbout"
                android:text="@string/menu_about"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </RelativeLayout>
    </ScrollView>

</LinearLayout>