<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_banner"
        android:layout_width="320px"
        android:layout_height="50px"
        android:layout_gravity="center_horizontal"
        android:background="#B66666"
        android:gravity="center"
        android:text="*** PROPAGANDA ***"
        android:textColor="#DADADA" />

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inAnimation="@anim/in_animation"
        android:outAnimation="@anim/out_animation" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical" >

            <ImageButton
                android:id="@+id/imgButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="left"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:onClick="onClickImage"
                android:scaleType="fitCenter"
                android:src="@drawable/bt_brewery" />

            <TextView
                android:id="@+id/txt_brewery"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/imgButton"
                android:gravity="center"
                android:text="@string/menu_brewery"
                android:textColor="#ffc600"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgButton"
                android:layout_marginLeft="15dp"
                android:text="@string/str_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffc600"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_name"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/txt_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_name"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_website"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffc600"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_website"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_website"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:inputType="textUri" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_website"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffc600"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_description"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:inputType="textMultiLine" />
        </RelativeLayout>
    </ViewSwitcher>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow >

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_menu_back"
                android:text="Previous"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_menu_forward"
                android:text="Next"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>